# travel-planner

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/travel_planner/: settings.py  urls.py
backend/travel_projects/: apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
backend/travel_projects/management/commands/: fetch_places.py
backend/travel_projects/migrations/: 0001_initial.py
backend/user/: models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
